label fixes